--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -3,8 +3,8 @@ owner: theotang # Your GitHub organization or username, where this repository li
 repo: upptime # The name of this repository
 
 sites:
-  - name: Google
-    url: https://www.google.com
+  - name: home.6nat.com
+    url: https://home.6nat.com
   - name: Wikipedia
     url: https://en.wikipedia.org
   - name: Hacker News
